WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47684
Style fix for
r69735
https://bugs.webkit.org/show_bug.cgi?id=47684
Summary
Style fix for r69735
Justin Schuh
Reported
2010-10-14 13:26:09 PDT
Style fix for
r69735
Attachments
Patch
(1.24 KB, patch)
2010-10-14 13:28 PDT
,
Justin Schuh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Justin Schuh
Comment 1
2010-10-14 13:28:35 PDT
Created
attachment 70770
[details]
Patch
James Robinson
Comment 2
2010-10-14 13:30:41 PDT
Comment on
attachment 70770
[details]
Patch R=me
WebKit Commit Bot
Comment 3
2010-10-14 13:48:29 PDT
Comment on
attachment 70770
[details]
Patch Clearing flags on attachment: 70770 Committed
r69801
: <
http://trac.webkit.org/changeset/69801
>
WebKit Commit Bot
Comment 4
2010-10-14 13:48:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug