2010-10-14  Justin Schuh  <jschuh@chromium.org>

Reviewed by James Robinson.

        Style fix for r69735
        https://bugs.webkit.org/show_bug.cgi?id=47684

        No logic change. Existing tests apply.

        * rendering/RootInlineBox.cpp:
        (WebCore::RootInlineBox::alignBoxesInBlockDirection):

Canonical link: https://commits.webkit.org/60386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69801 268f45cc-cd09-0410-ab3c-d52691b4dbfc