WebCore/rendering/RootInlineBox.cpp
@@ -246,9 +246,7 @@ int RootInlineBox::alignBoxesInBlockDirection(int heightOfBlock, GlyphOverflowAn
     if (heightOfBlock > numeric_limits<int>::max() - maxHeight)
         return numeric_limits<int>::max();
 
-    heightOfBlock = heightOfBlock + maxHeight;
-    
-    return heightOfBlock;
+    return heightOfBlock + maxHeight;
 }
 
 GapRects RootInlineBox::fillLineSelectionGap(int selTop, int selHeight, RenderBlock* rootBlock, int blockX, int blockY, int tx, int ty,
